# DeMuG

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  pixi.toml
debug/: Debug.h
debugger/: CMakeLists.txt  DebuggerWindow.cpp  DebuggerWindow.h  main.cpp
debugger/fonts/: IconsFontAwesome5.h
debugger/ipc/: DebuggerIPC.h  EmulatorSharedMemory.cpp  EmulatorSharedMemory.h
debugger/utils/: RomReader.cpp  RomReader.h
debugger/windows/: CodeViewer.cpp  CodeViewer.h  EmulatorControls.cpp  EmulatorControls.h
gui/: FileChooser.h  MainWindow.cpp  MainWindow.h
hardware/: Apu.cpp  Apu.h  Bus.cpp  Bus.h  InputManager.cpp  InputManager.h  Ppu.cpp  Ppu.h  Screen.cpp  Screen.h  SerialIO.cpp  SerialIO.h  SharpSM83.cpp  SharpSM83.h  Timer.cpp  Timer.h
hardware/audio/: AudioHelper.h  SC1PulseSweep.h  SC2Pulse.h  SC3Wave.h  SC4Noise.h
hardware/mappers/: Cartridge.h  CartridgeHelper.h  MBC1.h  NoMBC.h
logging/: Logger.cpp  Logger.h
misc/debug/: Debug.h
misc/ipc/: SharedMemoryReader.cpp  SharedMemoryReader.h  SharedMemoryWriter.cpp  SharedMemoryWriter.h
misc/logging/: Logger.h
resources/: logo.icns
resources/linux/: DeMuG.desktop
resources/macos/: DS_Store  icon.icns
